# slither-mcp

./: .gitignore  .pre-commit-config.yaml  ADDING_TOOLS.md  CLAUDE.md  CLIENT_USAGE.md  CODEOWNERS  METRICS.md  MIGRATION_CLIENT_INIT.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  REPOSITORY_SETUP.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: test.yml
slither_mcp/: __init__.py  artifacts.py  callees.py  constants.py  facts.py  metrics.py  pagination.py  search.py  server.py  slither_wrapper.py  tool_registry.py  types.py
slither_mcp/client/: __init__.py  mcp_client.py  tool_wrappers.py
slither_mcp/tools/: __init__.py  analyze_events.py  analyze_low_level_calls.py  analyze_modifiers.py  analyze_state_variables.py  export_call_graph.py  find_dead_code.py  get_contract.py  get_contract_dependencies.py  get_contract_source.py  get_derived_contracts.py  get_function_source.py  get_inheritance_hierarchy.py  get_inherited_contracts.py  get_project_overview.py  get_storage_layout.py  list_contracts.py  list_detectors.py  list_function_callees.py  list_function_callers.py  list_function_implementations.py  list_functions.py  run_detectors.py  search_contracts.py  search_functions.py
tests/: __init__.py  conftest.py  test_analyze_events.py  test_analyze_low_level_calls.py  test_analyze_modifiers.py  test_analyze_state_variables.py  test_artifacts.py  test_detector_integration.py  test_export_call_graph.py  test_find_dead_code.py  test_get_contract_dependencies.py  test_get_contract_source.py  test_get_derived_contracts.py  test_get_function_callees.py  test_get_function_source.py  test_get_inheritance_hierarchy.py  test_get_inherited_contracts.py  test_get_project_overview.py  test_get_storage_layout.py  test_list_contracts.py  test_list_detectors.py  test_list_function_callees.py  test_list_function_callers.py  test_list_functions.py  test_mcp_client.py  test_pagination.py  test_run_detectors.py  test_search.py  test_search_contracts.py  test_search_functions.py  test_tool_wrappers.py  test_types.py
