[project]
name = "slither-mcp"
version = "2.1.0"
description = "MCP server for Slither static analysis of Solidity contracts"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Trail of Bits", email = "opensource@trailofbits.com"},
]
keywords = [
    "slither",
    "solidity",
    "mcp",
    "model-context-protocol",
    "static-analysis",
    "smart-contracts",
    "ethereum",
    "security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastmcp>=2.14.0,<3",
    "mcp>=1.25.0,<2",
    "pydantic>=2.12.0,<3",
    "slither-analyzer>=0.11.5,<0.12",
    "crytic-compile>=0.3.11,<0.4",
    "sentry-sdk>=2.49.0,<3",
]

[project.urls]
Homepage = "https://github.com/trailofbits/slither-mcp"
Repository = "https://github.com/trailofbits/slither-mcp"
Issues = "https://github.com/trailofbits/slither-mcp/issues"
Documentation = "https://github.com/trailofbits/slither-mcp#readme"
Changelog = "https://github.com/trailofbits/slither-mcp/blob/main/CHANGELOG.md"

[project.scripts]
slither-mcp = "slither_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.0,<10",
    "pytest-asyncio>=1.3.0,<2",
    "ruff>=0.14.0",
    "ty>=0.0.11",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # Line length handled separately

